// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateVirtualClientSource full output > snapshots the dev source for an in-memory pglite 1`] = `
"import { drizzle } from 'drizzle-orm/pglite'
import { relations, schema } from '#drizzle/schema'

let _db = null

export function devDrizzleConfig() {
  return {
    schema,
    relations,
  }
}

let _config

/**
 * Internal to the dev database: the runtime plugin injects the
 * \`drizzle:dev-mock:config\` hook result before the first \`useDrizzle()\`.
 */
export function configureDevDrizzle(config) {
  _config = config
}

function initDrizzle() {
  return drizzle(_config ?? devDrizzleConfig())
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: _db }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the dev-baked source for better-sqlite3 1`] = `
"import { drizzle } from 'drizzle-orm/better-sqlite3'
import { relations, schema } from '#drizzle/schema'

let _db = null

export function devDrizzleConfig() {
  return {
    connection: 'file:.data/dev.db',
    schema,
    relations,
  }
}

let _config

/**
 * Internal to the dev database: the runtime plugin injects the
 * \`drizzle:dev-mock:config\` hook result before the first \`useDrizzle()\`.
 */
export function configureDevDrizzle(config) {
  _config = config
}

function initDrizzle() {
  return drizzle(_config ?? devDrizzleConfig())
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: _db }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the dev-baked source for bun-sqlite 1`] = `
"import { drizzle } from 'drizzle-orm/bun-sqlite'
import { relations, schema } from '#drizzle/schema'

let _db = null

export function devDrizzleConfig() {
  return {
    connection: 'file:.data/dev.db',
    schema,
    relations,
  }
}

let _config

/**
 * Internal to the dev database: the runtime plugin injects the
 * \`drizzle:dev-mock:config\` hook result before the first \`useDrizzle()\`.
 */
export function configureDevDrizzle(config) {
  _config = config
}

function initDrizzle() {
  return drizzle(_config ?? devDrizzleConfig())
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: _db }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the dev-baked source for libsql 1`] = `
"import { drizzle } from 'drizzle-orm/libsql'
import { relations, schema } from '#drizzle/schema'

let _db = null

export function devDrizzleConfig() {
  return {
    connection: { url: 'file:.data/dev.db' },
    schema,
    relations,
  }
}

let _config

/**
 * Internal to the dev database: the runtime plugin injects the
 * \`drizzle:dev-mock:config\` hook result before the first \`useDrizzle()\`.
 */
export function configureDevDrizzle(config) {
  _config = config
}

function initDrizzle() {
  return drizzle(_config ?? devDrizzleConfig())
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: _db }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the dev-baked source for node-sqlite 1`] = `
"import { drizzle } from 'drizzle-orm/node-sqlite'
import { relations, schema } from '#drizzle/schema'

let _db = null

export function devDrizzleConfig() {
  return {
    connection: 'file:.data/dev.db',
    schema,
    relations,
  }
}

let _config

/**
 * Internal to the dev database: the runtime plugin injects the
 * \`drizzle:dev-mock:config\` hook result before the first \`useDrizzle()\`.
 */
export function configureDevDrizzle(config) {
  _config = config
}

function initDrizzle() {
  return drizzle(_config ?? devDrizzleConfig())
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: _db }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the dev-baked source for pglite 1`] = `
"import { drizzle } from 'drizzle-orm/pglite'
import { relations, schema } from '#drizzle/schema'

let _db = null

export function devDrizzleConfig() {
  return {
    connection: '.data/pglite',
    schema,
    relations,
  }
}

let _config

/**
 * Internal to the dev database: the runtime plugin injects the
 * \`drizzle:dev-mock:config\` hook result before the first \`useDrizzle()\`.
 */
export function configureDevDrizzle(config) {
  _config = config
}

function initDrizzle() {
  return drizzle(_config ?? devDrizzleConfig())
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: _db }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the runtime-resolved source for better-sqlite3 1`] = `
"import { drizzle } from 'drizzle-orm/better-sqlite3'
import { useDrizzleConnection } from '#drizzle/config'
import { relations, schema } from '#drizzle/schema'

let _db = null

function initDrizzle() {
  const connection = useDrizzleConnection()
  return drizzle({
    connection: connection.url || connection.connectionString || connection,
    schema,
    relations,
  })
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: undefined }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the runtime-resolved source for bun-sqlite 1`] = `
"import { drizzle } from 'drizzle-orm/bun-sqlite'
import { useDrizzleConnection } from '#drizzle/config'
import { relations, schema } from '#drizzle/schema'

let _db = null

function initDrizzle() {
  const connection = useDrizzleConnection()
  return drizzle({
    connection: connection.url || connection.connectionString || connection,
    schema,
    relations,
  })
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: undefined }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the runtime-resolved source for libsql 1`] = `
"import { drizzle } from 'drizzle-orm/libsql'
import { useDrizzleConnection } from '#drizzle/config'
import { relations, schema } from '#drizzle/schema'

let _db = null

function initDrizzle() {
  const connection = useDrizzleConnection()
  return drizzle({
    connection: {
      url: connection.url,
      ...(connection.authToken ? { authToken: connection.authToken } : {}),
    },
    schema,
    relations,
  })
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: undefined }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the runtime-resolved source for node-sqlite 1`] = `
"import { drizzle } from 'drizzle-orm/node-sqlite'
import { useDrizzleConnection } from '#drizzle/config'
import { relations, schema } from '#drizzle/schema'

let _db = null

function initDrizzle() {
  const connection = useDrizzleConnection()
  return drizzle({
    connection: connection.url || connection.connectionString || connection,
    schema,
    relations,
  })
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: undefined }
}
"
`;

exports[`generateVirtualClientSource full output > snapshots the runtime-resolved source for pglite 1`] = `
"import { drizzle } from 'drizzle-orm/pglite'
import { useDrizzleConnection } from '#drizzle/config'
import { relations, schema } from '#drizzle/schema'

let _db = null

function initDrizzle() {
  const connection = useDrizzleConnection()
  return drizzle({
    connection: connection.dataDir || connection.url || connection.connectionString,
    schema,
    relations,
  })
}

export function useDrizzle() {
  _db ??= initDrizzle()
  return { db: _db, schema, relations, mockDb: undefined }
}
"
`;
